syntax = "proto3";

package com.example.grpc;

option java_multiple_files = true;

service BookingService {
    rpc booking(BookingRequest) returns (BookingResponse);
}

message BookingRequest {
    string id = 1;
}

message BookingResponse {
    string id = 1;
    int64 created = 2;
    string userId = 3;
}
